removed justfiy center on fixed sidebard card. Causing overflow looking for fix

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,7 +26,6 @@ body{
     overflow-y: scroll;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     .magic-card{
       padding: 20px;
